<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/altura"/>

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_sua_altura_em_metros"
        android:inputType="numberDecimal"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/peso"/>

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_seu_peso_em_kg"
        android:inputType="numberDecimal"
        android:textSize="25dp"/>

    <Button
        android:id="@+id/button_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verificar_imc"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:onClick="verificarIMC" />

    <TextView
        android:id="@+id/text_diagnostico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/diagnostico"/>

</LinearLayout>